# au-energy-scraper

./: Cargo.toml  README.md  output.txt
src/: main.rs
src/common/: common.rs  mod.rs  parser_types.rs  processor.rs  record_deserializer.rs  unzip_process.rs
src/fixtures/: PUBLIC_TRADINGIS_202403031335_0000000412683134.CSV  TradingIs.html
src/http_requests/: html.rs  mod.rs  nemweb.rs  rooftop_pv.rs
src/models/: mod.rs  nem_current_rooftop_pv.rs  nem_current_rooftop_pv_actual.rs  nem_current_tradingis_report.rs  nem_current_tradingis_reports.rs  utils.rs
src/parsers/: generic_csv_parser.rs  html.rs  mod.rs  rooftop_pv_parser.rs  url.rs
src/time/: time_ranges.rs
src/time_utils/: datetimezone_conversion.rs  mod.rs
src/utils/: html_parse.rs  mod.rs  time_ranges.rs  url_parse.rs
