[package]
name = "au-energy-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.35", features = ["serde"] }
zip = "0.6.6"
csv = "1.3.0"
chrono-tz = "0.8.6"
regex = "1.10.4"
tokio = {version = "1.36.0", features = ["full"]}
reqwest = {version = "0.12.2", features = ["json"]}
bytes = "1.6.0"
wiremock = "0.6.0"
tokio-postgres = "0.7.10"
